fixed links and double to 12TB
the second server can take 24TB but it costs like 400K

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ var Sizes = [
 var DefaultSize = Sizes[3];
 var TB = Sizes[4][1];
 
-var MAX_SENSIBLE = 6 * TB;
+var MAX_SENSIBLE = 12 * TB;
 
 function doesMyDataFitInRam(dataSize) {
 	return dataSize <= MAX_SENSIBLE;
@@ -41,7 +41,7 @@ function start() {
 	function recalculate() {
 		var dataSize = (+inpNum.value) * (+inpSize.value);
     	if (doesMyDataFitInRam(dataSize)) {
-			answer.innerHTML = "<a href=\"http://www.dell.com/us/business/p/poweredge-r920/pd\">YES</a>, <a href=\"http://www8.hp.com/uk/en/products/proliant-servers/product-detail.html?oid=8090149#!tab=specs\">your</a> data fits in RAM.";
+			answer.innerHTML = "<a href=\"https://www.dell.com/th/business/p/poweredge-r930/pd\">YES</a>, <a href=\"https://www.supermicro.com/en/products/system/7U/7089/SYS-7089P-TR4T.cfm\">your</a> data fits in RAM.";
 			body.classList.add('answer-yes');
 			body.classList.remove('answer-no');
 		} else {
@@ -88,7 +88,7 @@ body {
 		<select id="inpSize">
 		</select>
 	</div>
-    <span id="inspiredBy">Inspired by <a href="https://twitter.com/garybernhardt/status/600783770925420546">https://twitter.com/garybernhardt/status/600783770925420546</a> - <a href="https://github.com/lukegb/yourdatafitsinram">source (GitHub)</a></span>
+	<span id="inspiredBy">Inspired by <a href="https://twitter.com/garybernhardt/status/600783770925420546">https://twitter.com/garybernhardt/status/600783770925420546</a> - <a href="https://github.com/lukegb/yourdatafitsinram">source (GitHub)</a></span>
 
 	<script>
 		start();
